# Rust-Podman-Atomic-Deploy

./: LICENSE  Podmanfile.deployment_script  README.md  README.sk.md  fix_podman_userns.sh  podman_subids_files_mass_add.sh  podman_subids_mass_add.sh  podman_uidgid_extend.sh  podman_userns_fix.sh
deployment_script/: Cargo.toml  Podmanfile  deployment_script
deployment_script/src/: main.rs
static_web_server/: Cargo.toml  Podmanfile  index.html  static_web_server
static_web_server/src/: main.rs
